Fixed captions in dark mode.

--- a/css/main2.css
+++ b/css/main2.css
@@ -209,6 +209,12 @@ div.centered {
   color: #444;
 }
 
+@media (prefers-color-scheme: dark) {
+  div.centered {
+    color: #ccc;
+  }
+}
+
 div.centered img {
   margin: 0;
   float: none;
